--- a/styles/app_left.css
+++ b/styles/app_left.css
@@ -1,6 +1,6 @@
 #left-panel {
     position: relative;
-    height: 100%;
+    height: calc(100% - 20px);
     width: min(300px, 90%);
     z-index: 10;
     background-color: #232323;
@@ -9,6 +9,9 @@
     padding-left: 20px;
     padding-top: 20px;
     transition: all 1s ease-in-out;
+
+    display: flex;
+    flex-direction: column;
 }
 
 #lpanel-title {
